organize spots index. map fixed on right, spots flex wrapped nicely

--- a/app/assets/stylesheets/api/search.scss
+++ b/app/assets/stylesheets/api/search.scss
@@ -2,24 +2,38 @@
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-  // width: 100%;
+  padding-top: 66px;
+  // position: relative;
 
   .spots-index-left {
-    padding-top: 66px;
     flex-wrap: wrap;
     width: 60%;
     display: flex;
 
-    img {
-      width: 20%;
+    .spots-index-top {
+      width: 100%;
+    }
+
+    .spot-index-item {
+      width: 50%;
+
+      img {
+        width: 80%;
+      }
+
     }
   }
 
   .spots-index-right {
     width: 40%;
+    display: flex;
 
-    img {
-      width: 100%;
+    #map-container {
+      position: fixed;
+
+      img {
+        width: 100%;
+      }
     }
   }
 }
